--- a/app/src/main/res/drawable/etborder.xml
+++ b/app/src/main/res/drawable/etborder.xml
@@ -3,7 +3,8 @@
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="2dp" />
+            <stroke android:width="1dp" />
+            <stroke android:color="@color/defaultColor" />
         </shape>
     </item>
 
