--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,7 +85,8 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:fontFamily="@font/montserrat_regular"
-        android:text="NEW USER? REGISTER HERE"
+        android:text="@string/go_to_register"
+        android:onClick="goToRegister"
         android:textColor="@color/defaultColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
